Fix NordVPN icon link

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13008,4 +13008,5 @@
 	<item component="ComponentInfo{com.adguard.android/com.adguard.android.ui.activity.SplashActivity}" drawable="adguard" />
 	<item component="ComponentInfo{org.andstatus.game2048/org.andstatus.game2048.MyMainActivity}" drawable="_2048" />
 	<item component="ComponentInfo{com.goodwy.messages/com.goodwy.messages.feature.main.MainActivity}" drawable="_4messages" />
+	<item component="ComponentInfo{com.nordvpn.android/com.nordvpn.android.mobile.MainActivity}" drawable="nordvpn" />
 </resources>
