add compinfo, update icon

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12999,7 +12999,7 @@
 	<item component="ComponentInfo{com.nothing.cmf.watch/com.watchmanager.MainActivity}" drawable="cmf_watch" />
 	<item component="ComponentInfo{com.lagradost.cloudstream3.prerelease/com.lagradost.cloudstream3.ui.account.AccountSelectActivity}" drawable="cloudstream_beta" />
 	<item component="ComponentInfo{com.agc.gcam90/com.android.camera.CameraLauncher}" drawable="camera" />
-	<item component="ComponentInfo{com.monero.app/com.monero.app.MainActivity}" drawable="cake_wallet" />
+	<item component="ComponentInfo{com.monero.app/com.monero.app.MainActivity}" drawable="cake_monero" />
 	<item component="ComponentInfo{com.poweramp.v3.aurora/com.poweramp.v3.aurora.SkinInfoActivity}" drawable="aurora_poweramp_skin" />
 	<item component="ComponentInfo{com.anz.lotus/com.anz.lotus.ui.MainActivity}" drawable="anz_plus" />
 	<item component="ComponentInfo{net.xblacky.animexwallpaper/net.xblacky.animexwallpaper.AppIntroActivity}" drawable="anime_x_wallpaper" />
