--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -176,6 +176,7 @@
 	<item drawable="zcalc" />
 	<item drawable="zcard" />
 	<item drawable="zlibrary" />
+	<item drawable="cake_monero" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
