--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -177,6 +177,7 @@
 	<item drawable="zcard" />
 	<item drawable="zlibrary" />
 	<item drawable="cake_monero" />
+	<item drawable="openreads" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -505,6 +506,7 @@
 	<item drawable="omnicard_alt_1" />
 	<item drawable="ooni_probe_alt_1" />
 	<item drawable="openboard_alt_1" />
+	<item drawable="openreads_alt_1" />
 	<item drawable="organic_maps_alt_1" />
 	<item drawable="orgzly_alt_1" />
 	<item drawable="otomoto_alt_1" />
