--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -176,6 +176,11 @@
         image="https://avatars.githubusercontent.com/u/1668712"
         link="https://github.com/MaciekBaron" />
     <contributor
+        name="Maddie M"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/55149813"
+        link="https://github.com/maddie-m" />
+    <contributor
         name="mahmoudk1000"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/24735185"
@@ -256,6 +261,11 @@
         image="https://avatars.githubusercontent.com/u/94466218"
         link="https://github.com/RENOMIZER" />
     <contributor
+        name="RISHI KUMAR S"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/150787679"
+        link="https://riars.dev/" />
+    <contributor
         name="Safa Ali Safa"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/36265128"
@@ -310,16 +320,6 @@
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/59519298"
         link="https://github.com/YuXiang187" />
-    <contributor
-        name="Maddie M"
-        contribution="Icons"
-        image="https://avatars.githubusercontent.com/u/55149813"
-        link="https://github.com/maddie-m" />
-    <contributor
-        name="Rishi Kumar"
-        contribution="Icons"
-        image="https://avatars.githubusercontent.com/u/140878054"
-        link="https://rishikumars.com/" />
     <contributor
         name="Arabi Ishaque"
         contribution="Testing"
