new Home Assistant icon and fix for missing icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -45,7 +45,6 @@
 	<item drawable="cuberite" />
 	<item drawable="cyanide_and_happiness" />
 	<item drawable="cythara" />
-	<item drawable="daily_one_mail" />
 	<item drawable="dantotsu" />
 	<item drawable="dead_by_daylight_mobile" />
 	<item drawable="dealshare" />
@@ -79,6 +78,7 @@
 	<item drawable="hannaford" />
 	<item drawable="hannaford_alt_1" />
 	<item drawable="hejtter" />
+	<item drawable="home_assistant" />
 	<item drawable="homemedikit" />
 	<item drawable="hz_refresher" />
 	<item drawable="idle_slayer" />
@@ -380,6 +380,7 @@
 	<item drawable="google_plus_alt_1" />
 	<item drawable="google_voice_alt_1" />
 	<item drawable="google_wallet_alt_1" />
+	<item drawable="home_assistant_alt_1" />
 	<item drawable="hahabu_alt_1" />
 	<item drawable="halma_alt_1" />
 	<item drawable="hannaford_alt_1" />
@@ -3471,7 +3472,6 @@
 	<item drawable="daikomu" />
 	<item drawable="daily_diary" />
 	<item drawable="daily_note" />
-	<item drawable="daily_one_mail" />
 	<item drawable="daily_schedule" />
 	<item drawable="daily_yoga" />
 	<item drawable="daily_you" />
