--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13089,4 +13089,5 @@
 	<item component="ComponentInfo{com.backblaze.android/com.backblaze.android.activity.StartAuthActivity}" drawable="backblaze" />
 	<item component="ComponentInfo{com.vg.attendancemanager/com.vg.attendancemanager.MainActivity}" drawable="attendance_manager" />
 	<item component="ComponentInfo{com.series.aster.launcher/com.series.aster.launcher.ui.activities.MainActivity}" drawable="aster_launcher" />
+	<item component="ComponentInfo{chat.simplex.app/chat.simplex.app.MainActivity_dark_blue}" drawable="simplex_alt_1" />
 </resources>
