--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -49,6 +49,7 @@
 	<item drawable="zoho_invoice" />
 	<item drawable="zoho_people" />
 	<item drawable="zoho_projects" />
+	<item drawable="simplex_alt_1" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -468,6 +469,7 @@
 	<item drawable="shizuku_alt_1" />
 	<item drawable="signal_alt_1" />
 	<item drawable="signal_alt_2" />
+	<item drawable="simplex_alt_1" />
 	<item drawable="simple_app_launcher_amber" />
 	<item drawable="simple_app_launcher_blue" />
 	<item drawable="simple_app_launcher_bluegrey" />
