--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12633,7 +12633,7 @@
 	<item component="ComponentInfo{ru.execbit.aiostore/ru.execbit.aiostore.MainActivity}" drawable="aio_store" />
 	<item component="ComponentInfo{net.bat.store/net.bat.store.view.activity.SplashActivity}" drawable="aha_games" />
 	<item component="ComponentInfo{com.abjjad.app/com.abjjad.app.ui.activities.auth.LoginActivity}" drawable="abjjad" />
-	<item component="ComponentInfo{com.zaneschepke.wireguardautotunnel/com.zaneschepke.wireguardautotunnel.ui.}" drawable="wg_tunnel" />
+	<item component="ComponentInfo{com.zaneschepke.wireguardautotunnel/com.zaneschepke.wireguardautotunnel.ui.MainActivity}" drawable="wg_tunnel" />
 	<item component="ComponentInfo{tmendes.com.waterydroid/tmendes.com.waterydroid.SettingsActivity}" drawable="waterydroid" />
 	<item component="ComponentInfo{com.stresscodes.wallp/com.stresscodes.wallp.CustomSplashScreen}" drawable="walp" />
 	<item component="ComponentInfo{com.stresscodes.wallp/com.stresscodes.wallp.SplashScreen}" drawable="walp" />
