replace icons as they completely changed upstream and no point in keeping alts

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13090,4 +13090,5 @@
 	<item component="ComponentInfo{com.vg.attendancemanager/com.vg.attendancemanager.MainActivity}" drawable="attendance_manager" />
 	<item component="ComponentInfo{com.series.aster.launcher/com.series.aster.launcher.ui.activities.MainActivity}" drawable="aster_launcher" />
 	<item component="ComponentInfo{chat.simplex.app/chat.simplex.app.MainActivity_dark_blue}" drawable="simplex_alt_1" />
+	<item component="ComponentInfo{net.youapps.calcyou/net.youapps.calcyou.MainActivity}" drawable="calc_you" />
 </resources>
