--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -50,6 +50,8 @@
 	<item drawable="zoho_people" />
 	<item drawable="zoho_projects" />
 	<item drawable="simplex_alt_1" />
+	<item drawable="calc_you" />
+	<item drawable="ricochlime" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
