--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13189,4 +13189,7 @@
 	<item component="ComponentInfo{com.airlock.iam.a2fa/com.futurae.mobileapp.ui.home.HomeActivity}" drawable="airlock" />
 	<item component="ComponentInfo{com.adobe.ims.accountaccess/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="adobe_account_access" />
 	<item component="ComponentInfo{com.adda247.app/com.adda247.modules.home.HomeActivity}" drawable="adda247" />
+	<item component="ComponentInfo{org.eu.droid_ng.jellyfish/acr.browser.lightning.SplashActivity}" drawable="lineageos_jelly_browser" />
+	<item component="ComponentInfo{com.libremobileos.etar/com.android.calendar.AllInOneActivity}" prefix="calendar_" />
+	<item component="ComponentInfo{com.libremobileos.recorder/org.lineageos.recorder.RecorderActivity}" drawable="sound_recorder" />
 </resources>
