Update icons & compinfos
modified:   app/src/main/assets/appfilter.xml
modified:   app/src/main/res/xml/appfilter.xml

modified:   app/src/main/res/drawable-nodpi/chennai_bus.png
modified:   app/src/main/res/drawable-nodpi/doc_scanner.png
modified:   app/src/main/res/drawable-nodpi/tata_play.png

modified:   resources/vectors/ather.svg
modified:   resources/vectors/chennai_bus.svg
modified:   resources/vectors/doc_scanner.svg
modified:   resources/vectors/tata_play.svg

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8958,6 +8958,7 @@
 	<item component="ComponentInfo{com.zoho.notebook/com.zoho.notebook.activities.NoteBookActivity}" drawable="notebook" />
 	<item component="ComponentInfo{com.zoho.support/com.zoho.support.ZohoSupportActivity}" drawable="zoho_desk" />
 	<item component="ComponentInfo{com.zoho.work.drive/com.zoho.work.drive.activities.SplashScreenActivity}" drawable="zoho_workdrive" />
+	<item component="ComponentInfo{com.zoho.work.drive/com.zoho.work.drive.module.main.MainActivity}" drawable="zoho_workdrive" />
 	<item component="ComponentInfo{com.zoiper.android.app/com.zoiper.android.ui.MainActivity}" drawable="zoiper" />
 	<item component="ComponentInfo{com.zoiper.android.zoiperbeta.app/com.zoiper.android.ui.MainActivity}" drawable="zoiper" />
 	<item component="ComponentInfo{com.zoiperpremium.android.app/com.zoiper.android.ui.MainActivity}" drawable="zoiper" />
@@ -13193,6 +13194,7 @@
 	<item component="ComponentInfo{org.eu.droid_ng.jellyfish/acr.browser.lightning.SplashActivity}" drawable="lineageos_jelly_browser" />
 	<item component="ComponentInfo{com.libremobileos.recorder/org.lineageos.recorder.RecorderActivity}" drawable="sound_recorder" />
 	<item component="ComponentInfo{com.zoho.zohoone/com.zoho.zohoone.splash.SplashScreenActivity}" drawable="zoho_one" />
+	<item component="ComponentInfo{com.zoho.zohoone/com.zoho.zohoone.applock.AppLockActivity}" drawable="zoho_one" />
 	<item component="ComponentInfo{com.zoho.zohopulse/com.zoho.zohopulse.main.SplashActivity}" drawable="zoho_connect" />
 	<item component="ComponentInfo{com.zoho.assist/com.zoho.assist.ui.landing.view.LandingPageActivity}" drawable="zoho_assist" />
 	<item component="ComponentInfo{com.htetznaing.zfont2/com.htetznaing.zfont2.ui.StartingActivity}" drawable="zfont_3" />
@@ -13252,6 +13254,7 @@
 	<item component="ComponentInfo{org.chennaimetrorail.appv1/org.chennaimetrorail.appv1.activity.SplashScreen}" drawable="cmrl" />
 	<item component="ComponentInfo{agrigolo.chubbyclick/agrigolo.chubbyclick.MainActivity}" drawable="chubby_click" />
 	<item component="ComponentInfo{io.ionic.starter67676/io.ionic.starter67676.MainActivity}" drawable="chennai_bus" />
+	<item component="ComponentInfo{io.ionic.starter67676/io.ionic.starter.MainActivity}" drawable="chennai_bus" />
 	<item component="ComponentInfo{com.cambly.cambly/com.cambly.featuredump.MainActivity}" drawable="cambly" />
 	<item component="ComponentInfo{com.bunq.android/com.bunq.android.ui.activity.SplashScreenActivity}" drawable="bunq" />
 	<item component="ComponentInfo{com.netease.newspike/com.netease.game.MessiahNativeActivity}" drawable="blood_strike" />
@@ -13259,6 +13262,7 @@
 	<item component="ComponentInfo{com.sirma.mobile.bible.android/youversion.bible.app.MainActivity}" drawable="bible" />
 	<item component="ComponentInfo{mv.com.bml.mib/mv.com.bml.mib.MainActivity}" drawable="bank_of_maldives" />
 	<item component="ComponentInfo{com.athermobileapp/com.athermobileapp.SplashActivity}" drawable="ather" />
+	<item component="ComponentInfo{com.athermobileapp/com.athermobileapp.ui.splash.SplashActivity}" drawable="ather" />
 	<item component="ComponentInfo{com.atakmap.app.civ/com.atakmap.app.ATAKActivityCiv}" drawable="atak" />
 	<item component="ComponentInfo{asgardius.page.s3music/asgardius.page.s3music.MainActivity}" drawable="asgardius_s3music" />
 	<item component="ComponentInfo{asgardius.page.s3manager/asgardius.page.s3manager.MainActivity}" drawable="asgardius_s3manager" />
