--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -6151,6 +6151,7 @@
 	<item component="ComponentInfo{com.randonautica.app/com.randonautica.app.LaunchLoadingActivity}" drawable="randonautica" />
 	<item component="ComponentInfo{com.rapido.passenger/com.rapido.passenger.activities.SplashScreen}" drawable="rapido" />
 	<item component="ComponentInfo{com.rapido.passenger/com.rapido.passenger.launcher.ui.LauncherActivity}" drawable="rapido" />
+	<item component="ComponentInfo{com.rapido.passenger/com.rapido.passenger.DefaultAlias}" drawable="rapido" />
 	<item component="ComponentInfo{com.raptisoft.Chuzzle2/com.raptisoft.Chuzzle2.Chuzzle2Activity}" drawable="chuzzle_2" />
 	<item component="ComponentInfo{com.raptisoft.ChuzzleSnap/com.raptisoft.ChuzzleSnap.ChuzzleSnapActivity}" drawable="chuzzle_snap" />
 	<item component="ComponentInfo{com.rarlab.rar/com.rarlab.rar.MainActivity}" drawable="rar" />
@@ -10755,6 +10756,7 @@
 	<item component="ComponentInfo{org.floens.clover/org.floens.chan.ui.activity.BoardActivity}" drawable="clover" />
 	<item component="ComponentInfo{org.forkgram.messenger/org.telegram.messenger.DefaultIcon}" drawable="forkgram" />
 	<item component="ComponentInfo{org.forkgram.messenger/org.telegram.ui.LaunchActivity}" drawable="forkgram" />
+	<item component="ComponentInfo{org.forkclient.messenger.beta/org.telegram.messenger.DefaultIcon}" drawable="forkgram" />
 	<item component="ComponentInfo{org.fox.ttrss/org.fox.ttrss.LaunchActivity}" drawable="tiny_tiny_rss" />
 	<item component="ComponentInfo{org.frap129.spectrum/org.frap129.spectrum.SplashActivity}" drawable="spectrum" />
 	<item component="ComponentInfo{org.freecodecamp/com.example.freecodecamp.MainActivity}" drawable="freecodecamp" />
