--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -28,6 +28,7 @@
 	<item drawable="biggby_coffee" />
 	<item drawable="bizconnect" />
 	<item drawable="blood_strike" />
+	<item drawable="bluesky" />
 	<item drawable="bolt_food" />
 	<item drawable="boxberry" />
 	<item drawable="bunq" />
