Update icons & compinfos (#755)
* Update icons & compinfos

modified:   app/src/main/assets/appfilter.xml
modified:   app/src/main/res/xml/appfilter.xml

modified:   app/src/main/res/drawable-nodpi/chennai_bus.png
modified:   app/src/main/res/drawable-nodpi/doc_scanner.png
modified:   app/src/main/res/drawable-nodpi/tata_play.png

modified:   resources/vectors/ather.svg
modified:   resources/vectors/chennai_bus.svg
modified:   resources/vectors/doc_scanner.svg
modified:   resources/vectors/tata_play.svg

* Update compinfos

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -6151,6 +6151,7 @@
 	<item component="ComponentInfo{com.randonautica.app/com.randonautica.app.LaunchLoadingActivity}" drawable="randonautica" />
 	<item component="ComponentInfo{com.rapido.passenger/com.rapido.passenger.activities.SplashScreen}" drawable="rapido" />
 	<item component="ComponentInfo{com.rapido.passenger/com.rapido.passenger.launcher.ui.LauncherActivity}" drawable="rapido" />
+	<item component="ComponentInfo{com.rapido.passenger/com.rapido.passenger.DefaultAlias}" drawable="rapido" />
 	<item component="ComponentInfo{com.raptisoft.Chuzzle2/com.raptisoft.Chuzzle2.Chuzzle2Activity}" drawable="chuzzle_2" />
 	<item component="ComponentInfo{com.raptisoft.ChuzzleSnap/com.raptisoft.ChuzzleSnap.ChuzzleSnapActivity}" drawable="chuzzle_snap" />
 	<item component="ComponentInfo{com.rarlab.rar/com.rarlab.rar.MainActivity}" drawable="rar" />
@@ -8958,6 +8959,7 @@
 	<item component="ComponentInfo{com.zoho.notebook/com.zoho.notebook.activities.NoteBookActivity}" drawable="notebook" />
 	<item component="ComponentInfo{com.zoho.support/com.zoho.support.ZohoSupportActivity}" drawable="zoho_desk" />
 	<item component="ComponentInfo{com.zoho.work.drive/com.zoho.work.drive.activities.SplashScreenActivity}" drawable="zoho_workdrive" />
+	<item component="ComponentInfo{com.zoho.work.drive/com.zoho.work.drive.module.main.MainActivity}" drawable="zoho_workdrive" />
 	<item component="ComponentInfo{com.zoiper.android.app/com.zoiper.android.ui.MainActivity}" drawable="zoiper" />
 	<item component="ComponentInfo{com.zoiper.android.zoiperbeta.app/com.zoiper.android.ui.MainActivity}" drawable="zoiper" />
 	<item component="ComponentInfo{com.zoiperpremium.android.app/com.zoiper.android.ui.MainActivity}" drawable="zoiper" />
@@ -10754,6 +10756,7 @@
 	<item component="ComponentInfo{org.floens.clover/org.floens.chan.ui.activity.BoardActivity}" drawable="clover" />
 	<item component="ComponentInfo{org.forkgram.messenger/org.telegram.messenger.DefaultIcon}" drawable="forkgram" />
 	<item component="ComponentInfo{org.forkgram.messenger/org.telegram.ui.LaunchActivity}" drawable="forkgram" />
+	<item component="ComponentInfo{org.forkclient.messenger.beta/org.telegram.messenger.DefaultIcon}" drawable="forkgram" />
 	<item component="ComponentInfo{org.fox.ttrss/org.fox.ttrss.LaunchActivity}" drawable="tiny_tiny_rss" />
 	<item component="ComponentInfo{org.frap129.spectrum/org.frap129.spectrum.SplashActivity}" drawable="spectrum" />
 	<item component="ComponentInfo{org.freecodecamp/com.example.freecodecamp.MainActivity}" drawable="freecodecamp" />
@@ -13193,6 +13196,7 @@
 	<item component="ComponentInfo{org.eu.droid_ng.jellyfish/acr.browser.lightning.SplashActivity}" drawable="lineageos_jelly_browser" />
 	<item component="ComponentInfo{com.libremobileos.recorder/org.lineageos.recorder.RecorderActivity}" drawable="sound_recorder" />
 	<item component="ComponentInfo{com.zoho.zohoone/com.zoho.zohoone.splash.SplashScreenActivity}" drawable="zoho_one" />
+	<item component="ComponentInfo{com.zoho.zohoone/com.zoho.zohoone.applock.AppLockActivity}" drawable="zoho_one" />
 	<item component="ComponentInfo{com.zoho.zohopulse/com.zoho.zohopulse.main.SplashActivity}" drawable="zoho_connect" />
 	<item component="ComponentInfo{com.zoho.assist/com.zoho.assist.ui.landing.view.LandingPageActivity}" drawable="zoho_assist" />
 	<item component="ComponentInfo{com.htetznaing.zfont2/com.htetznaing.zfont2.ui.StartingActivity}" drawable="zfont_3" />
@@ -13252,6 +13256,7 @@
 	<item component="ComponentInfo{org.chennaimetrorail.appv1/org.chennaimetrorail.appv1.activity.SplashScreen}" drawable="cmrl" />
 	<item component="ComponentInfo{agrigolo.chubbyclick/agrigolo.chubbyclick.MainActivity}" drawable="chubby_click" />
 	<item component="ComponentInfo{io.ionic.starter67676/io.ionic.starter67676.MainActivity}" drawable="chennai_bus" />
+	<item component="ComponentInfo{io.ionic.starter67676/io.ionic.starter.MainActivity}" drawable="chennai_bus" />
 	<item component="ComponentInfo{com.cambly.cambly/com.cambly.featuredump.MainActivity}" drawable="cambly" />
 	<item component="ComponentInfo{com.bunq.android/com.bunq.android.ui.activity.SplashScreenActivity}" drawable="bunq" />
 	<item component="ComponentInfo{com.netease.newspike/com.netease.game.MessiahNativeActivity}" drawable="blood_strike" />
@@ -13259,6 +13264,7 @@
 	<item component="ComponentInfo{com.sirma.mobile.bible.android/youversion.bible.app.MainActivity}" drawable="bible" />
 	<item component="ComponentInfo{mv.com.bml.mib/mv.com.bml.mib.MainActivity}" drawable="bank_of_maldives" />
 	<item component="ComponentInfo{com.athermobileapp/com.athermobileapp.SplashActivity}" drawable="ather" />
+	<item component="ComponentInfo{com.athermobileapp/com.athermobileapp.ui.splash.SplashActivity}" drawable="ather" />
 	<item component="ComponentInfo{com.atakmap.app.civ/com.atakmap.app.ATAKActivityCiv}" drawable="atak" />
 	<item component="ComponentInfo{asgardius.page.s3music/asgardius.page.s3music.MainActivity}" drawable="asgardius_s3music" />
 	<item component="ComponentInfo{asgardius.page.s3manager/asgardius.page.s3manager.MainActivity}" drawable="asgardius_s3manager" />
