--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -2075,7 +2075,7 @@
 	<item drawable="alexis" />
 	<item drawable="alexis_pie" />
 	<item drawable="alfa" />
-	<item drawable="alfabank" />
+	<item drawable="alfa_bank" />
 	<item drawable="alfred_home_security_camera" />
 	<item drawable="alga" />
 	<item drawable="ali__express" />
