--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -3132,8 +3132,8 @@
 	<item component="ComponentInfo{com.ford.fordpassimg/com.fordmps.mobileapp.shared.login.LauncherActivity}" drawable="fordpass" />
 	<item component="ComponentInfo{com.fordownloads.orangefox/com.fordownloads.orangefox.activity.MainActivity}" drawable="orangefox" />
 	<item component="ComponentInfo{com.formagrid.airtable/com.formagrid.airtable.activity.HomescreenActivity}" drawable="airtable" />
-	<item component="ComponentInfo{com.formulaone.production/com.avs.f1.ui.splash.SplashActivity}" drawable="f1_tv" />
-	<item component="ComponentInfo{com.formulaone.production/formulaone.com.ui.SplashActivity}" drawable="f1_tv" />
+	<item component="ComponentInfo{com.formulaone.production/com.avs.f1.ui.splash.SplashActivity}" drawable="formula_1_tv" />
+	<item component="ComponentInfo{com.formulaone.production/formulaone.com.ui.SplashActivity}" drawable="formula_1_tv" />
 	<item component="ComponentInfo{com.forrestguice.suntimeswidget/com.forrestguice.suntimeswidget.alarmclock.ui.AlarmClockActivityLauncher}" drawable="suntimes_alarms" />
 	<item component="ComponentInfo{com.forrestguice.suntimeswidget/com.forrestguice.suntimeswidget.SuntimesActivity}" drawable="suntimes" />
 	<item component="ComponentInfo{com.forshared/com.forshared.SplashActivity}" drawable="_4shared" />
