--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -209,6 +209,8 @@
 	<item drawable="zoho_vault" />
 	<item drawable="zoho_webinar" />
 	<item drawable="zoho_writer" />
+	<item drawable="formula_1" />
+	<item drawable="formula_1_tv" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -362,6 +364,7 @@
 	<item drawable="flow_alt_1" />
 	<item drawable="flowwow_flowers_alt_1" />
 	<item drawable="fm_radio_alt_1" />
+	<item drawable="formula_1_alt_1" />
 	<item drawable="fosdem_alt_1" />
 	<item drawable="fotmob_alt_1" />
 	<item drawable="freezer_alt_1" />
@@ -4107,7 +4110,6 @@
 	<item drawable="ez_notes" />
 
 	<category title="F" />
-	<item drawable="f1_tv" />
 	<item drawable="f45_training" />
 	<item drawable="f_colors" />
 	<item drawable="f_droid" />
@@ -4356,6 +4358,7 @@
 	<item drawable="forkgram" />
 	<item drawable="forkyz" />
 	<item drawable="formula_1" />
+	<item drawable="formula_1_tv" />
 	<item drawable="forte" />
 	<item drawable="fortnite" />
 	<item drawable="fortune_city" />
