--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -3132,8 +3132,8 @@
 	<item component="ComponentInfo{com.ford.fordpassimg/com.fordmps.mobileapp.shared.login.LauncherActivity}" drawable="fordpass" />
 	<item component="ComponentInfo{com.fordownloads.orangefox/com.fordownloads.orangefox.activity.MainActivity}" drawable="orangefox" />
 	<item component="ComponentInfo{com.formagrid.airtable/com.formagrid.airtable.activity.HomescreenActivity}" drawable="airtable" />
-	<item component="ComponentInfo{com.formulaone.production/com.avs.f1.ui.splash.SplashActivity}" drawable="f1_tv" />
-	<item component="ComponentInfo{com.formulaone.production/formulaone.com.ui.SplashActivity}" drawable="f1_tv" />
+	<item component="ComponentInfo{com.formulaone.production/com.avs.f1.ui.splash.SplashActivity}" drawable="formula_1_tv" />
+	<item component="ComponentInfo{com.formulaone.production/formulaone.com.ui.SplashActivity}" drawable="formula_1_tv" />
 	<item component="ComponentInfo{com.forrestguice.suntimeswidget/com.forrestguice.suntimeswidget.alarmclock.ui.AlarmClockActivityLauncher}" drawable="suntimes_alarms" />
 	<item component="ComponentInfo{com.forrestguice.suntimeswidget/com.forrestguice.suntimeswidget.SuntimesActivity}" drawable="suntimes" />
 	<item component="ComponentInfo{com.forshared/com.forshared.SplashActivity}" drawable="_4shared" />
@@ -11301,7 +11301,7 @@
 	<item component="ComponentInfo{ru.aaaaaabz.installer/ru.aaaaaabz.installer.MainActivity1}" drawable="lucky_patcher" />
 	<item component="ComponentInfo{ru.aeroflot/ru.aeroflot.SplashScreenActivity}" drawable="aeroflot" />
 	<item component="ComponentInfo{ru.akbars.mobile/com.akbars.bankok.screens.splash.SplashActivity}" drawable="ak_bars_online" />
-	<item component="ComponentInfo{ru.alfabank.mobile.android/ru.alfabank.mobile.android.splash.presentation.activity.SplashActivity}" drawable="alfabank" />
+	<item component="ComponentInfo{ru.alfabank.mobile.android/ru.alfabank.mobile.android.splash.presentation.activity.SplashActivity}" drawable="alfa_bank" />
 	<item component="ComponentInfo{ru.aliexpress.buyer/com.alibaba.aliexpresshd.home.ui.MainActivity}" drawable="ali__express" />
 	<item component="ComponentInfo{ru.altarix.mos.pgu/ru.gosuslugimsk.mpgu4.feature.splash.SplashActivity}" drawable="moscow_public_services" />
 	<item component="ComponentInfo{ru.andr7e.deviceinfohw/ru.andr7e.deviceinfohw.MainActivity}" drawable="device_info" />
