Fix conflicts & Update compinfos
	modified:   app/src/main/assets/appfilter.xml
	modified:   app/src/main/res/xml/appfilter.xml
	modified:   resources/new_icons.yaml
	deleted:    resources/utilities/icons/blinkit.png
	deleted:    resources/utilities/icons/blinkit.svg
	deleted:    resources/utilities/icons/zara.png
	deleted:    resources/utilities/icons/zara.svg

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -3751,6 +3751,7 @@
 	<item component="ComponentInfo{com.grindrapp.android/com.grindrapp.android.HomeActivityUnlimited}" drawable="grindr" />
 	<item component="ComponentInfo{com.grindrapp.android/com.grindrapp.android.SplashActivity-Original}" drawable="grindr" />
 	<item component="ComponentInfo{com.grofers.customerapp/com.grofers.customerapp.ui.screens.splash.SplashActivity}" drawable="blinkit" />
+	<item component="ComponentInfo{com.grofers.customerapp/com.grofers.customerapp.DEFAULT}" drawable="blinkit" />
 	<item component="ComponentInfo{com.grofsoft.tripview.lite/com.grofsoft.tripview.TripViewActivity}" drawable="tripview" />
 	<item component="ComponentInfo{com.grofsoft.tripview/com.grofsoft.tripview.TripViewActivity}" drawable="tripview" />
 	<item component="ComponentInfo{com.groundspeak.geocaching.intro/com.groundspeak.geocaching.intro.activities.BrandedLaunchActivity}" drawable="geocaching" />
@@ -4126,6 +4127,7 @@
 	<item component="ComponentInfo{com.inditex.pullandbear/es.sdos.sdosproject.ui.splash.activity.LaunchActivity}" drawable="pull_and_bear" />
 	<item component="ComponentInfo{com.inditex.zara/com.inditex.zara.MainActivity}" drawable="zara" />
 	<item component="ComponentInfo{com.inditex.zara/com.inditex.zara.Splash}" drawable="zara" />
+	<item component="ComponentInfo{com.inditex.zara/com.inditex.zara.MainActivityDefaultIcon}" drawable="zara" />
 	<item component="ComponentInfo{com.indusindbank.IndusDirect/com.indusindbank.IndusDirect.IndusdirectS1}" drawable="bank" />
 	<item component="ComponentInfo{com.infinitecampus.student.campusportalhybrid/com.campusportalhybrid.MainActivity}" drawable="campus_student" />
 	<item component="ComponentInfo{com.infinity.traffix/com.unity3d.player.UnityPlayerActivity}" drawable="traffix" />
