--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -36,6 +36,7 @@
 	<item drawable="call_a_bike" />
 	<item drawable="cambly" />
 	<item drawable="cardo_connect" />
+	<item drawable="change_my_mac" />
 	<item drawable="chatgpt_wrapper" />
 	<item drawable="chennai_bus" />
 	<item drawable="chubby_click" />
@@ -292,6 +293,7 @@
 	<item drawable="car_parking_multiplayer_alt_1" />
 	<item drawable="catcode_alt_1" />
 	<item drawable="cbc_gem_alt_1" />
+	<item drawable="change_my_mac_alt_1" />
 	<item drawable="chrome_alt_1" />
 	<item drawable="chrome_alt_2" />
 	<item drawable="chrome_canary_alt_1" />
@@ -3166,6 +3168,7 @@
 	<item drawable="chameleonrun" />
 	<item drawable="chan_burauza" />
 	<item drawable="change_detection" />
+	<item drawable="change_my_mac" />
 	<item drawable="changes" />
 	<item drawable="channels" />
 	<item drawable="character_ai" />
