--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13008,6 +13008,7 @@
 	<item component="ComponentInfo{com.poweramp.v3.aurora/com.poweramp.v3.aurora.SkinInfoActivity}" drawable="aurora_poweramp_skin" />
 	<item component="ComponentInfo{com.anz.lotus/com.anz.lotus.ui.MainActivity}" drawable="anz_plus" />
 	<item component="ComponentInfo{net.xblacky.animexwallpaper/net.xblacky.animexwallpaper.AppIntroActivity}" drawable="anime_x_wallpaper" />
+	<item component="ComponentInfo{net.xnano.android.changemymac/net.xnano.android.changemymac.MainActivity}" drawable="change_my_mac"/>
 	<item component="ComponentInfo{net.tcodes.altaufikvpn/com.tcodes.altaufikvpn.MainActivity}" drawable="altaufik_vpn" />
 	<item component="ComponentInfo{com.adguard.android/com.adguard.android.ui.activity.MainActivity}" drawable="adguard" />
 	<item component="ComponentInfo{com.adguard.android/com.adguard.android.ui.activity.SplashActivity}" drawable="adguard" />
