icon update: Yandex.Music

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11501,7 +11501,7 @@
 	<item component="ComponentInfo{ru.yandex.metro/ru.yandex.metro.LaunchActivity}" drawable="mosmetro" />
 	<item component="ComponentInfo{ru.yandex.mobile.metrica/ru.yandex.metrica.ui.PreloaderActivity}" drawable="yandex_metrika" />
 	<item component="ComponentInfo{ru.yandex.money/ru.yandex.money.view.EntryPointActivity}" drawable="yandex_money" />
-	<item component="ComponentInfo{ru.yandex.music/ru.yandex.music.main.MainScreenActivity}" drawable="yandex_music" />
+	<item component="ComponentInfo{ru.yandex.music/ru.yandex.music.main.MainScreenActivity}" drawable="yandex_music_alt_1" />
 	<item component="ComponentInfo{ru.yandex.radio/ru.yandex.radio.app.WelcomeActivity}" drawable="yandex_radio" />
 	<item component="ComponentInfo{ru.yandex.rasp/ru.yandex.rasp.AMainActivity}" drawable="yandex_trains" />
 	<item component="ComponentInfo{ru.yandex.searchplugin/ru.yandex.searchplugin.MainActivity}" drawable="yandex" />
