--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -1122,6 +1122,7 @@
 	<item drawable="xposed_installer_alt_1" />
 	<item drawable="yandex_keyboard_alt_1" />
 	<item drawable="yandex_mail_alt_1" />
+	<item drawable="yandex_music_alt_1" />
 	<item drawable="yatse_alt_1" />
 	<item drawable="youtube_alt_1" />
 	<item drawable="youtube_gaming_alt_1" />
@@ -9741,7 +9742,6 @@
 	<item drawable="yandex_messenger" />
 	<item drawable="yandex_metrika" />
 	<item drawable="yandex_money" />
-	<item drawable="yandex_music" />
 	<item drawable="yandex_navigator" />
 	<item drawable="yandex_q" />
 	<item drawable="yandex_radio" />
