--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -635,6 +635,17 @@
 	<item drawable="shizuku_alt_1" />
 	<item drawable="signal_alt_1" />
 	<item drawable="signal_alt_2" />
+	<item drawable="signal_alt_3" />
+	<item drawable="signal_alt_4" />
+	<item drawable="signal_alt_5" />
+	<item drawable="signal_alt_6" />
+	<item drawable="signal_alt_7" />
+	<item drawable="signal_alt_8" />
+	<item drawable="signal_alt_9" />
+	<item drawable="signal_alt_10" />
+	<item drawable="signal_alt_11" />
+	<item drawable="signal_alt_12" />
+	<item drawable="signal_alt_13" />
 	<item drawable="simple_app_launcher_amber" />
 	<item drawable="simple_app_launcher_blue" />
 	<item drawable="simple_app_launcher_bluegrey" />
@@ -1122,6 +1133,7 @@
 	<item drawable="xposed_installer_alt_1" />
 	<item drawable="yandex_keyboard_alt_1" />
 	<item drawable="yandex_mail_alt_1" />
+	<item drawable="yandex_music_alt_1" />
 	<item drawable="yatse_alt_1" />
 	<item drawable="youtube_alt_1" />
 	<item drawable="youtube_gaming_alt_1" />
@@ -8048,17 +8060,6 @@
 	<item drawable="sign_for_deezer" />
 	<item drawable="sign_for_spotify" />
 	<item drawable="signal" />
-	<item drawable="signal_alt_3" />
-	<item drawable="signal_alt_4" />
-	<item drawable="signal_alt_5" />
-	<item drawable="signal_alt_6" />
-	<item drawable="signal_alt_7" />
-	<item drawable="signal_alt_8" />
-	<item drawable="signal_alt_9" />
-	<item drawable="signal_alt_10" />
-	<item drawable="signal_alt_11" />
-	<item drawable="signal_alt_12" />
-	<item drawable="signal_alt_13" />
 	<item drawable="signal_generator" />
 	<item drawable="silpo" />
 	<item drawable="silver_dict" />
@@ -9741,7 +9742,6 @@
 	<item drawable="yandex_messenger" />
 	<item drawable="yandex_metrika" />
 	<item drawable="yandex_money" />
-	<item drawable="yandex_music" />
 	<item drawable="yandex_navigator" />
 	<item drawable="yandex_q" />
 	<item drawable="yandex_radio" />
