misc: move old OpenFoodFacts icon to alt_1

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10628,9 +10628,9 @@
 	<item component="ComponentInfo{one.tomorrow.app/one.tomorrow.app.ui.MainActivity}" drawable="bank" />
 	<item component="ComponentInfo{oneplus.consumer.android/servify.android.consumer.splash.SplashActivity}" drawable="one_plus_care" />
 	<item component="ComponentInfo{opencontacts.open.com.opencontacts/opencontacts.open.com.opencontacts.activities.MainActivity}" drawable="openfoodfacts" />
-	<item component="ComponentInfo{openfoodfacts.github.scrachx.openfood/openfoodfacts.github.scrachx.openfood.features.splash.SplashActivity}" drawable="openfoodfacts" />
-	<item component="ComponentInfo{openfoodfacts.github.scrachx.openfood/openfoodfacts.github.scrachx.openfood.views.MainActivity}" drawable="openfoodfacts" />
-	<item component="ComponentInfo{openfoodfacts.github.scrachx.openfood/openfoodfacts.github.scrachx.openfood.views.splash.SplashActivity}" drawable="openfoodfacts" />
+	<item component="ComponentInfo{openfoodfacts.github.scrachx.openfood/openfoodfacts.github.scrachx.openfood.features.splash.SplashActivity}" drawable="openfoodfacts_alt_1" />
+	<item component="ComponentInfo{openfoodfacts.github.scrachx.openfood/openfoodfacts.github.scrachx.openfood.views.MainActivity}" drawable="openfoodfacts_alt_1" />
+	<item component="ComponentInfo{openfoodfacts.github.scrachx.openfood/openfoodfacts.github.scrachx.openfood.views.splash.SplashActivity}" drawable="openfoodfacts_alt_1" />
 	<item component="ComponentInfo{orcaforkwgt.kustom.pack/org.kustom.api.dashboard.DashboardActivity}" drawable="orca_kwgt" />
 	<item component="ComponentInfo{org.ab.uae/org.ab.uae.StartActivity}" drawable="uae4droid" />
 	<item component="ComponentInfo{org.acestream.core/org.acestream.engine.StartActivity}" drawable="ace_stream_engine" />
