--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -544,6 +544,7 @@
 	<item drawable="omnicard_alt_1" />
 	<item drawable="ooni_probe_alt_1" />
 	<item drawable="openboard_alt_1" />
+	<item drawable="openfoodfacts_alt_1" />
 	<item drawable="openreads_alt_1" />
 	<item drawable="organic_maps_alt_1" />
 	<item drawable="orgzly_alt_1" />
@@ -6818,7 +6819,6 @@
 	<item drawable="opencord" />
 	<item drawable="opencv" />
 	<item drawable="opendocument_reader" />
-	<item drawable="openfoodfacts" />
 	<item drawable="opengur" />
 	<item drawable="openhab" />
 	<item drawable="openkeychain" />
