--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10627,7 +10627,7 @@
 	<item component="ComponentInfo{one.tomorrow.app/one.tomorrow.app.commons.ui.MainActivity}" drawable="bank" />
 	<item component="ComponentInfo{one.tomorrow.app/one.tomorrow.app.ui.MainActivity}" drawable="bank" />
 	<item component="ComponentInfo{oneplus.consumer.android/servify.android.consumer.splash.SplashActivity}" drawable="one_plus_care" />
-	<item component="ComponentInfo{opencontacts.open.com.opencontacts/opencontacts.open.com.opencontacts.activities.MainActivity}" drawable="openfoodfacts" />
+	<item component="ComponentInfo{opencontacts.open.com.opencontacts/opencontacts.open.com.opencontacts.activities.MainActivity}" drawable="google_phone" />
 	<item component="ComponentInfo{openfoodfacts.github.scrachx.openfood/openfoodfacts.github.scrachx.openfood.features.splash.SplashActivity}" drawable="openfoodfacts_alt_1" />
 	<item component="ComponentInfo{openfoodfacts.github.scrachx.openfood/openfoodfacts.github.scrachx.openfood.views.MainActivity}" drawable="openfoodfacts_alt_1" />
 	<item component="ComponentInfo{openfoodfacts.github.scrachx.openfood/openfoodfacts.github.scrachx.openfood.views.splash.SplashActivity}" drawable="openfoodfacts_alt_1" />
