Add alt icons (#766)

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -1243,6 +1243,11 @@
 	<item drawable="youtube_music_vanced_alt_1" />
 	<item drawable="youtube_revanced_alt_1" />
 	<item drawable="youtube_revanced_alt_2" />
+	<item drawable="youtube_revanced_alt_3" />
+	<item drawable="youtube_revanced_alt_4" />
+	<item drawable="youtube_revanced_alt_5" />
+	<item drawable="youtube_revanced_alt_6" />
+	<item drawable="youtube_revanced_alt_7" />
 	<item drawable="youtube_studio_alt_1" />
 	<item drawable="youtube_vanced_alt_1" />
 	<item drawable="youtube_vanced_alt_2" />
