add alt icons to new category

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -308,6 +308,11 @@
 	<item drawable="zoho_writer" />
 	<item drawable="linwood_butterfly" />
 	<item drawable="safespace" />
+	<item drawable="youtube_revanced_alt_3" />
+	<item drawable="youtube_revanced_alt_4" />
+	<item drawable="youtube_revanced_alt_5" />
+	<item drawable="youtube_revanced_alt_6" />
+	<item drawable="youtube_revanced_alt_7" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
