--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -306,6 +306,13 @@
 	<item drawable="zoho_vault" />
 	<item drawable="zoho_webinar" />
 	<item drawable="zoho_writer" />
+	<item drawable="linwood_butterfly" />
+	<item drawable="safespace" />
+	<item drawable="youtube_revanced_alt_3" />
+	<item drawable="youtube_revanced_alt_4" />
+	<item drawable="youtube_revanced_alt_5" />
+	<item drawable="youtube_revanced_alt_6" />
+	<item drawable="youtube_revanced_alt_7" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -551,6 +558,7 @@
 	<item drawable="libretube_shaped" />
 	<item drawable="libretube_torch" />
 	<item drawable="lichess_alt_1" />
+	<item drawable="linwood_butterfly_alt_1" />
 	<item drawable="lookout_alt_1" />
 	<item drawable="lsposed_manager_alt_1" />
 	<item drawable="ludo_king_alt_1" />
@@ -707,6 +715,7 @@
 	<item drawable="robinhood_alt_1" />
 	<item drawable="runtastic_alt_1" />
 	<item drawable="russian_e_government_alt_1" />
+	<item drawable="safespace_alt_1" />
 	<item drawable="sagernet_alt_1" />
 	<item drawable="samsung_ar_zone_alt_1" />
 	<item drawable="samsung_galaxy_apps_alt_1" />
