--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="yandex_translate" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -936,6 +937,7 @@
 	<item drawable="yandex_keyboard_alt_1" />
 	<item drawable="yandex_mail_alt_1" />
 	<item drawable="yandex_music_alt_1" />
+	<item drawable="yandex_translate_alt_1" />
 	<item drawable="yatse_alt_1" />
 	<item drawable="youtube_alt_1" />
 	<item drawable="youtube_gaming_alt_1" />
