--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11505,7 +11505,7 @@
 	<item component="ComponentInfo{ru.yandex.rasp/ru.yandex.rasp.AMainActivity}" drawable="yandex_trains" />
 	<item component="ComponentInfo{ru.yandex.searchplugin/ru.yandex.searchplugin.MainActivity}" drawable="yandex" />
 	<item component="ComponentInfo{ru.yandex.taxi/ru.yandex.taxi.activity.StartActivity}" drawable="yandex_taxi" />
-	<item component="ComponentInfo{ru.yandex.taximeter/ru.yandex.taximeter.LoginActivity}" drawable="yandex_taximeter" />
+	<item component="ComponentInfo{ru.yandex.taximeter/ru.yandex.taximeter.LoginActivity}" drawable="yandex_pro_alt_1" />
 	<item component="ComponentInfo{ru.yandex.translate/ru.yandex.translate.ui.activities.MainActivity}" drawable="yandex_translate" />
 	<item component="ComponentInfo{ru.yandex.uber/ru.yandex.taxi.activity.StartActivity}" drawable="uber" />
 	<item component="ComponentInfo{ru.yandex.uber_kz/ru.yandex.taxi.activity.StartActivity}" drawable="uber_kz" />
