--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -938,6 +938,7 @@
 	<item drawable="yandex_mail_alt_1" />
 	<item drawable="yandex_music_alt_1" />
 	<item drawable="yandex_translate_alt_1" />
+	<item drawable="yandex_pro_alt_1" />
 	<item drawable="yatse_alt_1" />
 	<item drawable="youtube_alt_1" />
 	<item drawable="youtube_gaming_alt_1" />
@@ -9664,7 +9665,6 @@
 	<item drawable="yandex_radio" />
 	<item drawable="yandex_services" />
 	<item drawable="yandex_taxi" />
-	<item drawable="yandex_taximeter" />
 	<item drawable="yandex_toloka" />
 	<item drawable="yandex_trains" />
 	<item drawable="yandex_translate" />
