--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -5,6 +5,7 @@
 
 	<category title="New" />
 	<item drawable="yandex_translate" />
+	<item drawable="yandex_navigator" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -939,6 +940,7 @@
 	<item drawable="yandex_music_alt_1" />
 	<item drawable="yandex_translate_alt_1" />
 	<item drawable="yandex_pro_alt_1" />
+	<item drawable="yandex_navigator_alt_1" />
 	<item drawable="yatse_alt_1" />
 	<item drawable="youtube_alt_1" />
 	<item drawable="youtube_gaming_alt_1" />
